# configs

./: .tmux.conf  .vimrc  .zshrc  CMakeLists.txt  README.md  config  config_i3status  i3_config  i3_config_final  i3_praca  init.vim  install_boost.sh  install_clang.sh  install_cmake.sh  install_g++.sh  install_gtest.sh  vimrc
alacritty/: alacritty.yml
boo/: CMakeLists.txt  README.md  clang_f_t.sh  make.sh
boo/src/: .main.cpp.swo  .main.cpp.swp  CMakeLists.txt  main.cpp
dotfiles/: .bashrc  .zshrc  i3_config
i3/: config  i3exit
new/exc_03_generator/: CMakeLists.txt  ClangTools.cmake  make.sh
new/exc_03_generator/inc/: generator.h  random.h  realrandom.h
new/exc_03_generator/src/: generator.cpp  main.cpp  realrandom.cpp
new/exc_03_generator/tests/: CMakeLists.txt  fakerandom.cpp  fakerandom.h  generatorTests.cpp
